@@ -14,11 +14,12 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
-    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
-    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+    // https://mvnrepository.com/artifact/org.jfxtras/jmetro
+    compile group: 'org.jfxtras', name: 'jmetro', version: '11.6.12'
+
 
 
 }
@@ -30,13 +31,5 @@ javafx {
 }
 
 
-mainClassName = 'io.github.pedroermarinho.hospital.MainApp'
-run{
-    jvmArgs=[
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-             "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-             "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
-    ]
-}
+mainClassName = 'io.github.pedroermarinho.hospital.Launcher'
+
